--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.jdbc-url=jdbc:oracle:thin:@//localhost:11521/ServiceName=ORCLPDB
+spring.datasource.jdbc-url=jdbc:oracle:thin:@//localhost:1521/orclpdb
 #spring.datasource.jdbc-url=jdbc:oracle:thin:@//localhost:11521;ServiceName=ORCLPDB
 spring.datasource.username=DBSECURITYGR06
 spring.datasource.password=123
