--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.datasource.jdbc-url=jdbc:oracle:thin:@//localhost:1521/ORCLPDB
 spring.datasource.username=DBSECURITYGR06
 spring.datasource.password=123
 spring.datasource.hikari.pool-name=springJPAHikariCP
-spring.datasource.hikari.connection-timeout = 30000
-spring.datasource.hikari.minimum-idle= 5
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.idle-timeout=10000
-spring.datasource.hikari.max-lifetime= 2000000
-spring.datasource.hikari.auto-commit =false
+spring.datasource.hikari.max-lifetime=2000000
+spring.datasource.hikari.auto-commit=false
 spring.datasource.hikari.leak-detection-threshold=605000
