add login function

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.datasource.hikari.idle-timeout=10000
 spring.datasource.hikari.max-lifetime=2000000
 spring.datasource.hikari.auto-commit=false
 spring.datasource.hikari.leak-detection-threshold=605000
+
+#cau hinh view resolver
+spring.mvc.view.prefix=/WEB-INF/pages/
+spring.mvc.view.suffix=.jsp
