fix add employee

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.datasource.hikari.leak-detection-threshold=605000
 #cau hinh view resolver
 spring.mvc.view.prefix=/WEB-INF/pages/
 spring.mvc.view.suffix=.jsp
+
+oracle.jdbc.J2EE13Compliant=true
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
